clang/test/BSC/Negative/OwnedStruct/uninitialized/owned-struct-return.cbs
// RUN: %clang_cc1 -verify %s
owned struct A {  
   public:
   int x;
   int y ;
  ~A(A this){
  }
};                       
A foo(){
   A a;
   a.x = 1;
   return a;  // expected-error {{cannot read a, because it is uninitialized}}
}

int main() {
   return 0;
}
